force-app/main/default/objects/os_Closing__c/fields/os_Listing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listing Agreement</label>
    <type>Checkbox</type>
</CustomField>