force-app/main/default/objects/os_Closing__c/fields/os_Listing_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Agreement_Date__c</fullName>
    <label>Listing Agreement Date</label>
    <type>Date</type>
</CustomField>