force-app/main/default/objects/os_Closing__c/fields/os_Listing_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Bedrooms__c</fullName>
    <formula>TEXT( os_Listing__r.os_Bedrooms_pb__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Bedrooms</label>
    <type>Text</type>
</CustomField>