force-app/main/default/objects/os_Closing__c/fields/os_Listing_Category__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Category__c</fullName>
    <formula>text( os_Listing__r.os_gsir_Listing_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Category</label>
    <type>Text</type>
</CustomField>