force-app/main/default/objects/os_Closing__c/fields/os_Listing_City__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_City__c</fullName>
    <formula>os_Listing__r.os_uaefields_City_Propertyfinder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing City</label>
    <type>Text</type>
</CustomField>