force-app/main/default/objects/os_Closing__c/fields/os_Listing_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Name__c</fullName>
    <label>Listing Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>