force-app/main/default/objects/os_Closing__c/fields/os_Listing_Property_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Property_Propertyfinder__c</fullName>
    <formula>os_Listing__r.os_uaefields_Property_Propertyfinder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Property - Propertyfinder</label>
    <type>Text</type>
</CustomField>