force-app/main/default/objects/os_Closing__c/fields/os_Listing_Property_type__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Property_type__c</fullName>
    <formula>TEXT( os_Listing__r.os_Property_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Property type</label>
    <type>Text</type>
</CustomField>