force-app/main/default/objects/os_Closing__c/fields/os_Listing_Size__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Size__c</fullName>
    <formula>os_Listing__r.os_TotalArea_pb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>