force-app/main/default/objects/os_Closing__c/fields/os_Listing_Status_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Status_Update_Date__c</fullName>
    <label>Listing Status Update Date</label>
    <type>Date</type>
</CustomField>