force-app/main/default/objects/os_Closing__c/fields/os_Listing_Sub_Community__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Sub_Community__c</fullName>
    <formula>os_Listing__r.os_uaefields_Sub_CommunityPropertyfinder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Sub Community</label>
    <type>Text</type>
</CustomField>