force-app/main/default/objects/os_Closing__c/fields/os_Loan_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Loan_Approval_Date__c</fullName>
    <label>Loan Approval Date</label>
    <type>Date</type>
</CustomField>