force-app/main/default/objects/os_Closing__c/fields/os_Mandate_Verification__c.field-meta.xml
<CustomField>
    <fullName>os_Mandate_Verification__c</fullName>
    <label>Mandate Verification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Non company Listings</fullName>
            </value>
            <value>
                <fullName>Non Exclusive</fullName>
            </value>
            <value>
                <fullName>Off Plan</fullName>
            </value>
            <value>
                <fullName>Off Plan not listed with the company</fullName>
            </value>
            <value>
                <fullName>Enquiry on another company listings</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>