force-app/main/default/objects/os_Closing__c/fields/os_Migrated__c.field-meta.xml
<CustomField>
    <fullName>os_Migrated__c</fullName>
    <label>Migrated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>[Migrated March19]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>