force-app/main/default/objects/os_Closing__c/fields/os_MLS_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>os_MLS_Update_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listing Status Update (MLS/Portal)</label>
    <type>Checkbox</type>
</CustomField>