force-app/main/default/objects/os_Closing__c/fields/os_Mortage__c.field-meta.xml
<CustomField>
    <fullName>os_Mortage__c</fullName>
    <label>Mortage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Na</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>