force-app/main/default/objects/os_Closing__c/fields/os_Mortgage_Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>os_Mortgage_Broker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Broker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MortgageBrokerContact</relationshipName>
    <type>Lookup</type>
</CustomField>