force-app/main/default/objects/os_Closing__c/fields/os_Mortgage_Loan_Approval_w_Conditions__c.field-meta.xml
<CustomField>
    <fullName>os_Mortgage_Loan_Approval_w_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage Loan Approval w/ Conditions</label>
    <type>Checkbox</type>
</CustomField>