force-app/main/default/objects/os_Closing__c/fields/os_Nationality__c.field-meta.xml
<CustomField>
    <fullName>os_Nationality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nationality</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>Closings (Nationality)</relationshipLabel>
    <relationshipName>Closings3</relationshipName>
    <type>Lookup</type>
</CustomField>