force-app/main/default/objects/os_Closing__c/fields/os_Nationality_AML__c.field-meta.xml
<CustomField>
    <fullName>os_Nationality_AML__c</fullName>
    <formula>TEXT(  os_Buyer_Tenant__r.os_Nationality__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationality</label>
    <type>Text</type>
</CustomField>