force-app/main/default/objects/os_Closing__c/fields/os_No_Objection_Certificate__c.field-meta.xml
<CustomField>
    <fullName>os_No_Objection_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Objection Certificate</label>
    <type>Checkbox</type>
</CustomField>