force-app/main/default/objects/os_Closing__c/fields/os_Note__c.field-meta.xml
<CustomField>
    <fullName>os_Note__c</fullName>
    <label>Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>