force-app/main/default/objects/os_Closing__c/fields/os_Occupation__c.field-meta.xml
<CustomField>
    <fullName>os_Occupation__c</fullName>
    <label>Occupation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>