force-app/main/default/objects/os_Closing__c/fields/os_Offer__c.field-meta.xml
<CustomField>
    <fullName>os_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>os_Offer__c</referenceTo>
    <relationshipName>Offer</relationshipName>
    <type>Lookup</type>
</CustomField>