force-app/main/default/objects/os_Closing__c/fields/os_Original_Price__c.field-meta.xml
<CustomField>
    <fullName>os_Original_Price__c</fullName>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>