force-app/main/default/objects/os_Closing__c/fields/os_Others_Reason_for_Cancelled_Details__c.field-meta.xml
<CustomField>
    <fullName>os_Others_Reason_for_Cancelled_Details__c</fullName>
    <label>Others Reason for Cancelled Details</label>
    <type>TextArea</type>
</CustomField>