force-app/main/default/objects/os_Closing__c/fields/os_Partial_Payment__c.field-meta.xml
<CustomField>
    <fullName>os_Partial_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Payment</label>
    <type>Checkbox</type>
</CustomField>