force-app/main/default/objects/os_Closing__c/fields/os_Passport_Issued_City__c.field-meta.xml
<CustomField>
    <fullName>os_Passport_Issued_City__c</fullName>
    <label>Passport Issued City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>