force-app/main/default/objects/os_Closing__c/fields/os_PEP__c.field-meta.xml
<CustomField>
    <fullName>os_PEP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEP</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipName>PEP</relationshipName>
    <type>Lookup</type>
</CustomField>