force-app/main/default/objects/os_Closing__c/fields/os_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>os_Pipeline__c</fullName>
    <label>Pipeline</label>
    <type>Date</type>
</CustomField>