force-app/main/default/objects/os_Closing__c/fields/os_Place_of_Birth_AML__c.field-meta.xml
<CustomField>
    <fullName>os_Place_of_Birth_AML__c</fullName>
    <formula>os_Buyer_Tenant__r.os_Place_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Birth</label>
    <type>Text</type>
</CustomField>