force-app/main/default/objects/os_Closing__c/fields/os_Premises_Number_DEWA__c.field-meta.xml
<CustomField>
    <fullName>os_Premises_Number_DEWA__c</fullName>
    <label>Premises Number (DEWA)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>