force-app/main/default/objects/os_Closing__c/fields/os_Price_Max_Winning_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>os_Price_Max_Winning_Inquiry__c</fullName>
    <formula>os_Winning_Inquiry__r.os_ListingPrice_pb_max__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price - Max (Winning Inquiry)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>