force-app/main/default/objects/os_Closing__c/fields/os_Project__c.field-meta.xml
<CustomField>
    <fullName>os_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>os_Project__c</referenceTo>
    <relationshipLabel>Closings</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>