force-app/main/default/objects/os_Closing__c/fields/os_Property_Transfer_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Transfer_Date_Time__c</fullName>
    <label>Property Transfer Date / Time</label>
    <type>DateTime</type>
</CustomField>