force-app/main/default/objects/os_Closing__c/fields/os_Purchase_Agreement_w_Addendums__c.field-meta.xml
<CustomField>
    <fullName>os_Purchase_Agreement_w_Addendums__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Agreement w/ Addendums</label>
    <type>Checkbox</type>
</CustomField>