force-app/main/default/objects/os_Closing__c/fields/os_Reason_for_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>os_Reason_for_Cancelled__c</fullName>
    <label>Reason for Cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer Pulled Off</fullName>
            </value>
            <value>
                <fullName>Seller Pulled Off</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>