force-app/main/default/objects/os_Closing__c/fields/os_Rental_Agreement__c.field-meta.xml
<CustomField>
    <fullName>os_Rental_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Agreement</label>
    <type>Checkbox</type>
</CustomField>