force-app/main/default/objects/os_Closing__c/fields/os_Rental_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Rental_Agreement_Date__c</fullName>
    <label>Rental End Date</label>
    <type>Date</type>
</CustomField>