force-app/main/default/objects/os_Closing__c/fields/os_Renter__c.field-meta.xml
<CustomField>
    <fullName>os_Renter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Tenant)</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>