force-app/main/default/objects/os_Closing__c/fields/os_Representing__c.field-meta.xml
<CustomField>
    <fullName>os_Representing__c</fullName>
    <label>Representing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>