force-app/main/default/objects/os_Closing__c/fields/os_Resync_Inquiry_Contract_Files__c.field-meta.xml
<CustomField>
    <fullName>os_Resync_Inquiry_Contract_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resync Inquiry/Contract Files</label>
    <type>Checkbox</type>
</CustomField>