force-app/main/default/objects/os_Closing__c/fields/os_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>os_Risk_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Rating</label>
    <type>Checkbox</type>
</CustomField>