force-app/main/default/objects/os_Closing__c/fields/os_Risk_Rating_Checklist__c.field-meta.xml
<CustomField>
    <fullName>os_Risk_Rating_Checklist__c</fullName>
    <label>Risk Rating Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Done</fullName>
            </value>
            <value>
                <fullName>Low risk</fullName>
            </value>
            <value>
                <fullName>Medium risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>