force-app/main/default/objects/os_Closing__c/fields/os_Screening_Result__c.field-meta.xml
<CustomField>
    <fullName>os_Screening_Result__c</fullName>
    <label>Screening Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PEP Identified</fullName>
            </value>
            <value>
                <fullName>OB / SIC</fullName>
            </value>
            <value>
                <fullName>PEP / OB / RE / SIC</fullName>
            </value>
            <value>
                <fullName>Refinative Clear - No Matches</fullName>
            </value>
            <value>
                <fullName>PEP/SIC</fullName>
            </value>
            <value>
                <fullName>SIC</fullName>
            </value>
            <value>
                <fullName>RE/SIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>