force-app/main/default/objects/os_Closing__c/fields/os_Second_Nationality__c.field-meta.xml
<CustomField>
    <fullName>os_Second_Nationality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Nationality</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>Closings (Second Nationality)</relationshipLabel>
    <relationshipName>Closings4</relationshipName>
    <type>Lookup</type>
</CustomField>