force-app/main/default/objects/os_Closing__c/fields/os_Seller__c.field-meta.xml
<CustomField>
    <fullName>os_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Seller</relationshipName>
    <type>Lookup</type>
</CustomField>