force-app/main/default/objects/os_Closing__c/fields/os_Seller_Agent_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Seller_Agent_Split_Amount__c</fullName>
    <formula>os_Seller_Side_Split_Amount__c *  os_Seller_Agent_Split_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Agent Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>