force-app/main/default/objects/os_Closing__c/fields/os_Seller_Agent_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>os_Seller_Agent_Split_Percent__c</fullName>
    <label>Seller Agent Split %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>