force-app/main/default/objects/os_Closing__c/fields/os_Seller_Disclosures__c.field-meta.xml
<CustomField>
    <fullName>os_Seller_Disclosures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seller Disclosures</label>
    <type>Checkbox</type>
</CustomField>