force-app/main/default/objects/os_Closing__c/fields/os_Seller_s_Gender__c.field-meta.xml
<CustomField>
    <fullName>os_Seller_s_Gender__c</fullName>
    <formula>TEXT(  os_Seller__r.os_Gender__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller&apos;s Gender</label>
    <type>Text</type>
</CustomField>