force-app/main/default/objects/os_Closing__c/fields/os_Seller_Side_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Seller_Side_Split_Amount__c</fullName>
    <formula>os_Sale_Price__c *  os_gsir_second_broker_split__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Side Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>