force-app/main/default/objects/os_Closing__c/fields/os_Seller_Side_Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>os_Seller_Side_Split_Percentage__c</fullName>
    <label>Seller Side Split %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>