force-app/main/default/objects/os_Closing__c/fields/os_Sharing_Rule__c.field-meta.xml
<CustomField>
    <fullName>os_Sharing_Rule__c</fullName>
    <label>Sharing Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sharing_Setting_Rule</valueSetName>
    </valueSet>
</CustomField>