force-app/main/default/objects/os_Closing__c/fields/os_Sharing_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>os_Sharing_Sub_Region__c</fullName>
    <label>Sharing Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sharing_Sub_Region</valueSetName>
    </valueSet>
</CustomField>