force-app/main/default/objects/os_Closing__c/fields/os_Signed_OTP_or_Reservation_Form__c.field-meta.xml
<CustomField>
    <fullName>os_Signed_OTP_or_Reservation_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed OTP or Reservation Form</label>
    <type>Checkbox</type>
</CustomField>