force-app/main/default/objects/os_Closing__c/fields/os_Sold_As__c.field-meta.xml
<CustomField>
    <fullName>os_Sold_As__c</fullName>
    <label>Sold As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>as Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>