force-app/main/default/objects/os_Closing__c/fields/os_Source_of_Fund_Wealth__c.field-meta.xml
<CustomField>
    <fullName>os_Source_of_Fund_Wealth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source of Fund / Wealth</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>Closings (Source of Fund / Wealth)</relationshipLabel>
    <relationshipName>Closings5</relationshipName>
    <type>Lookup</type>
</CustomField>