force-app/main/default/objects/os_Closing__c/fields/os_Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>os_Source_of_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source of Funds</label>
    <type>Checkbox</type>
</CustomField>