force-app/main/default/objects/os_Closing__c/fields/os_Success_Probability__c.field-meta.xml
<CustomField>
    <fullName>os_Success_Probability__c</fullName>
    <label>Success Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>