force-app/main/default/objects/os_Closing__c/fields/os_Success_Probability_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Success_Probability_Amount__c</fullName>
    <formula>os_Success_Probability__c *  os_Internal_Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Probability Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>