force-app/main/default/objects/os_Closing__c/fields/os_SystemExternalId__c.field-meta.xml
<CustomField>
    <fullName>os_SystemExternalId__c</fullName>
    <externalId>true</externalId>
    <label>SystemExternalId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>