force-app/main/default/objects/os_Closing__c/fields/os_SystemIsClosed__c.field-meta.xml
<CustomField>
    <fullName>os_SystemIsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemIsClosed</label>
    <type>Checkbox</type>
</CustomField>