force-app/main/default/objects/os_Closing__c/fields/os_TargetClosingDate__c.field-meta.xml
<CustomField>
    <fullName>os_TargetClosingDate__c</fullName>
    <label>Target Closing Date</label>
    <type>Date</type>
</CustomField>