force-app/main/default/objects/os_Closing__c/fields/os_Tenant_s_Nationality__c.field-meta.xml
<CustomField>
    <fullName>os_Tenant_s_Nationality__c</fullName>
    <formula>TEXT(  os_Renter__r.os_Nationality__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant&apos;s Nationality</label>
    <type>Text</type>
</CustomField>