force-app/main/default/objects/os_Closing__c/fields/os_Third_Broker_User_ID__c.field-meta.xml
<CustomField>
    <fullName>os_Third_Broker_User_ID__c</fullName>
    <formula>os_gsir_third_broker__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Broker User ID</label>
    <type>Text</type>
</CustomField>