force-app/main/default/objects/os_Closing__c/fields/os_Title_Report__c.field-meta.xml
<CustomField>
    <fullName>os_Title_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Report</label>
    <type>Checkbox</type>
</CustomField>