force-app/main/default/objects/os_Closing__c/fields/os_Title_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Title_Report_Date__c</fullName>
    <label>Title Report Date</label>
    <type>Date</type>
</CustomField>