force-app/main/default/objects/os_Closing__c/fields/os_Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>os_Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>