force-app/main/default/objects/os_Closing__c/fields/os_Total_Amount_Remains__c.field-meta.xml
<CustomField>
    <fullName>os_Total_Amount_Remains__c</fullName>
    <formula>os_Unit__r.os_Final_net_price__c -  os_Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Remains</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>