force-app/main/default/objects/os_Closing__c/fields/os_Total_Commision_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>os_Total_Commision_with_VAT__c</fullName>
    <formula>os_gsir_commision_payable_by_buyer_tenan__c +  os_gsir_commission_payableBySeller_landl__c * 1.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commision with VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>