force-app/main/default/objects/os_Closing__c/fields/os_Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>os_Total_Commission__c</fullName>
    <label>Total Commission %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>