force-app/main/default/objects/os_Closing__c/fields/os_Transfer_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Transfer_Office_Address__c</fullName>
    <label>Transfer Office Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DUBAI ELECTRICITY &amp; WATER AUTHORITY</fullName>
            </value>
            <value>
                <fullName>ROADS &amp; TRANSPORT AUTHORITY</fullName>
            </value>
            <value>
                <fullName>ALMANARA REALESTATE REGISTRATION TRUSTEE ONE PERSON COMPANY L.L.C</fullName>
            </value>
            <value>
                <fullName>AL TABU REGISTRATION TRUSTEE</fullName>
            </value>
            <value>
                <fullName>TAMLEEK REAL ESTATE REGISTRATION TRUSTEE L.L.C</fullName>
            </value>
            <value>
                <fullName>AMANAH TRUST REAL ESTATE REGISTRATION TRUSTEE L.L.C</fullName>
            </value>
            <value>
                <fullName>AFNAN REAL ESTATE REGISTRATION TRUSTE L.L.C</fullName>
            </value>
            <value>
                <fullName>DORCHESTER PROPERTIES REGISTRATION TRUSTEE L.L.C</fullName>
            </value>
            <value>
                <fullName>INJAZ REAL ESTATE REGISTRATION TRUSTEE L.L.C</fullName>
            </value>
            <value>
                <fullName>SEAL REAL ESTATE REGISTRATION AGENT L.L.C</fullName>
            </value>
            <value>
                <fullName>On Time Real Estate Registration</fullName>
            </value>
            <value>
                <fullName>FAST TRACK REAL ESTATE REGISTRATION AGENT</fullName>
            </value>
            <value>
                <fullName>MUBAYAA REAL ESTATE REGISTRATION TRUSTEE L.L.C</fullName>
            </value>
            <value>
                <fullName>APPROVED PROPERTY REGISTRATION L.L.C</fullName>
            </value>
            <value>
                <fullName>TAWTHEEQ REAL ESTATE REGISTRATION L.L.C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>