force-app/main/default/objects/os_Closing__c/fields/os_UAE_Residence__c.field-meta.xml
<CustomField>
    <fullName>os_UAE_Residence__c</fullName>
    <label>UAE Residence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>