force-app/main/default/objects/os_Closing__c/fields/os_Unit__c.field-meta.xml
<CustomField>
    <fullName>os_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>OS_Property__c</referenceTo>
    <relationshipLabel>Closings</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>