force-app/main/default/objects/os_Closing__c/fields/os_Value_Added_Tax_VAT_Included__c.field-meta.xml
<CustomField>
    <fullName>os_Value_Added_Tax_VAT_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Added Tax (VAT) Included</label>
    <type>Checkbox</type>
</CustomField>