force-app/main/default/objects/os_Closing__c/fields/os_Winning_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>os_Winning_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Inquiry</label>
    <referenceTo>os_Request__c</referenceTo>
    <relationshipName>WinningInquiry</relationshipName>
    <type>Lookup</type>
</CustomField>