force-app/main/default/objects/os_Closing__c/fields/os_Winning_Inquiry_Id__c.field-meta.xml
<CustomField>
    <fullName>os_Winning_Inquiry_Id__c</fullName>
    <formula>os_Winning_Inquiry__r.os_Inquiry_18_Digit_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winning Inquiry Id</label>
    <type>Text</type>
</CustomField>