force-app/main/default/objects/os_Closing__c/fields/os_Winning_Inquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Winning_Inquiry_Status__c</fullName>
    <formula>text( os_Winning_Inquiry__r.os_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winning Inquiry Status</label>
    <type>Text</type>
</CustomField>