force-app/main/default/objects/os_Closing__c/recordTypes/Exclusive_Project.recordType-meta.xml
<RecordType>
    <fullName>Exclusive_Project</fullName>
    <active>true</active>
    <label>Exclusive Project</label>
</RecordType>