force-app/main/default/objects/os_Closing__c/recordTypes/Sale.recordType-meta.xml
<RecordType>
    <fullName>Sale</fullName>
    <active>true</active>
    <label>Sale</label>
</RecordType>